--- a/Css/style.css
+++ b/Css/style.css
@@ -12,13 +12,15 @@ body{
     color: #fff;
 }
 
+/* ------------------header----------------- */
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(/assets/background/Background-img-desktop-1.png);
+    background-image: url(/assets/background/Background-img-desktop-1.webp);
     background-size:cover ;
     background-position: center;
     background-attachment: fixed;
+    margin-top: 60px;
 }
 
 .container{
@@ -66,7 +68,7 @@ nav ul li a:hover::after{
 }
 
 .header-text{
-    margin-top: 20%;
+    margin-top: 45%;
     font-size: 30px;
 
 }
@@ -405,10 +407,10 @@ footer img{
 /* -------------css for mobile viwe--------- */
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(/assets/background/Background-img-mobile.png);
+        background-image: url(/assets/background/Background-img-mobile.webp);
     }
     .header-text{
-        margin-top: 130%;
+        margin-top: 150%;
         font-size: 17px;
     
     }
