--- a/Css/style.css
+++ b/Css/style.css
@@ -1273,3 +1273,22 @@ footer img {
         padding: 10px;
     }
 }
+
+@media only screen and (max-width: 375px) {
+
+    .about-col-2 p{
+        margin-right: 19px;
+    }
+
+}
+
+@media only screen and (max-width: 320px) {
+
+    .about-col-2 p{
+        margin-right: 10px;
+    }
+    .tab-links {
+        margin-right: 23px;
+    }
+
+}
